// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdminGuesser /> renders loading 1`] = `
<Loading
  loadingPrimary="ra.page.loading"
  loadingSecondary="ra.message.loading"
/>
`;

exports[`<AdminGuesser /> renders with custom resources 1`] = `
<Admin
  customReducers={
    Object {
      "introspect": [Function],
    }
  }
  dataProvider={
    Object {
      "create": [Function],
      "delete": [Function],
      "deleteMany": [Function],
      "getList": [Function],
      "getMany": [Function],
      "getManyReference": [Function],
      "getOne": [Function],
      "update": [Function],
      "updateMany": [Function],
    }
  }
  loading={[Function]}
>
  <ResourceGuesser
    name="custom"
  />
</Admin>
`;

exports[`<AdminGuesser /> renders without custom resources 1`] = `
<Admin
  customReducers={
    Object {
      "introspect": [Function],
    }
  }
  dataProvider={
    Object {
      "create": [Function],
      "delete": [Function],
      "deleteMany": [Function],
      "getList": [Function],
      "getMany": [Function],
      "getManyReference": [Function],
      "getOne": [Function],
      "update": [Function],
      "updateMany": [Function],
    }
  }
  loading={[Function]}
>
  <ResourceGuesser
    name="books"
  />
</Admin>
`;

exports[`<AdminGuesser /> renders without data 1`] = `
<Admin
  customReducers={
    Object {
      "introspect": [Function],
    }
  }
  dataProvider={
    Object {
      "create": [Function],
      "delete": [Function],
      "deleteMany": [Function],
      "getList": [Function],
      "getMany": [Function],
      "getManyReference": [Function],
      "getOne": [Function],
      "update": [Function],
      "updateMany": [Function],
    }
  }
  loading={[Function]}
/>
`;
